[package]
name = "kinematics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.4"
num = "0.4.3"
linear-algebra = { path = "../../linear-algebra/rust" }
graphs = { path = "../../graphs/rust" }
